no extension=openssl in PHP, causes error

--- a/OutworldzFiles/PHP7/php.ini
+++ b/OutworldzFiles/PHP7/php.ini
@@ -747,7 +747,7 @@ include_path = "O:/Opensim/Outworldz DreamGrid Master.;/OutworldzFiles/PHP7/pear
 ; see documentation for security issues.  The alternate is to use the
 ; cgi.force_redirect configuration below
 ; http://php.net/doc-root
-doc_root = "C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Apache/htdocs/"
+doc_root = "O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Apache/htdocs/"
 
 ; The directory under which PHP opens the script using /~username used only
 ; if nonempty.
@@ -758,7 +758,7 @@ user_dir =
 ; http://php.net/extension-dir
 ;extension_dir = "./"
 ; On windows:
-extension_dir = "C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/PHP7/ext/"
+extension_dir = "O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/PHP7/ext/"
 
 
 ; Directory where the temporary files should be placed.
@@ -927,7 +927,7 @@ extension=mbstring
 extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
 ;extension=odbc
-extension=openssl
+;extension=openssl
 ;extension=pdo_firebird
 extension=pdo_mysql
 ;extension=pdo_oci
