--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://virtualworldsolutions.dyndns.org
+BaseURL=http://192.168.2.100
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.139
+PrivURL=http://192.168.2.100
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -46,10 +46,6 @@ PrivatePort=8003
 
 ; port used for icons, teleports and other tasks when communicating to/from opensim
 DiagnosticsPort=8001
-
-; jOpenSim URL
-jOpensimURL=${Const|BaseURL}:80
-jOpensimURLSSL=${Const|BaseURL}:443
 
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
@@ -150,7 +146,7 @@ HGAssetServiceConnector="HGAssetService@${Const|PublicPort}/OpenSim.Server.Handl
 HGGroupsServiceConnector="${Const|PublicPort}/OpenSim.Addons.Groups.dll:HGGroupsServiceRobustConnector"
 
 ;; needed for JOpensim profile pictures
-GetTextureConnector=
+GetTextureConnector=${Const|PublicPort}/Opensim.Capabilities.Handlers.dll:GetTextureSeverConnector
 
 ; * This is common for all services, it's the network setup for the entire
 ; * server instance, if none is specified above
@@ -527,7 +523,7 @@ HGInventoryServicePlugin="HGInventoryService@OpenSim.Services.HypergridService.d
 ;; end hypergrid
 ; Ask co-operative viewers to use a different currency name
 ;; Set by Dreamgrid
-Currency=$
+Currency=jO$
 
 ;; Set minimum fee to publish classified
 ClassifiedFee=0
@@ -542,12 +538,12 @@ AllowRemoteSetLoginLevel="false"
 MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
-;SearchURL = "${Const|jOpensimURL}/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
+;SearchURL = "${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=http://hyperica.com/Search/query.php
+SearchURL=http://192.168.2.100:80/JOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewer&templ=component&
 
 ; For V3 destination guide
-;DestinationGuide = "${Const|jOpensimURL}/index.php?option=com_opensim&view=guide&tmpl=component"
+;DestinationGuide = "${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=guide&tmpl=component"
 ;DestinationGuideURI="http://www.hyperica.com/destination-guide/"
 DestinationGuide=https://hyperica.com/destination-guide
 
@@ -646,12 +642,12 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-;welcome = ${Const|jOpensimURL}/index.php?option=com_opensim
+;welcome = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim
 welcome=http://outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
-;economy = ${Const|jOpensimURL}/components/com_opensim/
+;economy = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/components/com_opensim/
 ;economy = ${Const|BaseURL):${Const|PublicPort}
 economy=${Const|BaseURL}:${Const|PublicPort}
 
@@ -662,9 +658,8 @@ economy=${Const|BaseURL}:${Const|PublicPort}
 register=${Const|BaseURL}:${Const|PublicPort}/wifi/user/account/
 
 ; help: optional: page providing further assistance for users of your grid
-; help = ${Const|jOpensimURLSSL}/
-help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
-
+; help = ${Const|BaseURL}:${Const|PublicPort}//
+; help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
 ; password help: optional: page providing password assistance for users of your grid
 password=${Const|BaseURL}/${Const|PublicPort}/wifi/forgotpassword
 
