Events and search are Hyperica, or Jopensim Apache is always service

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -65,9 +65,7 @@ Include-FlotsamCache="config-include/FlotsamCache.ini"
 ;; Optionally, the port for the LLProxyLoginModule module can be changed
 ;Setup_LLProxyLoginModule = "9090/"
 ;; Authorization is not on by default, as it depends on external php
-; JOPensim
-AuthorizationServices="RemoteAuthorizationServicesConnector"
-
+;AuthorizationServices = "RemoteAuthorizationServicesConnector"
 [AssetService]
 DefaultAssetLoader="OpenSim.Framework.AssetLoader.Filesystem.dll"
 AssetLoaderArgs="assets/AssetSets.xml"
@@ -238,7 +236,6 @@ UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AuthorizationService]
-AuthorizationServerURI="${Const|BaseURL}:${Const|ApachePort}/JOpensim/index.php?option=com_opensim&view=auth&format=xml&tmpl=component"
 
 ; If you have regions with access restrictions
 ; specify them here using the convention
