--- a/Updater_Src/Updater/Updater.vbproj
+++ b/Updater_Src/Updater/Updater.vbproj
@@ -98,8 +98,6 @@
   <ItemGroup>
     <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
       <HintPath>packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -126,6 +124,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationEvents.vb" />
     <Compile Include="Downloader.Designer.vb">
       <DependentUpon>Downloader.vb</DependentUpon>
     </Compile>
@@ -197,9 +196,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes_blue.ico" />
+    <None Include="packages.config" />
     <None Include="Resources\copper.gif" />
     <None Include="packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
