--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -9,14 +9,14 @@
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis" version="3.3.1" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis" version="3.7.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.3.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.3.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.3.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.3.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.3.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.3.1" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.7.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.7.0" targetFramework="net472" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
@@ -36,4 +36,6 @@
   <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
+  <package id="Ubiety.Dns.Core" version="4.2.0" targetFramework="net472" />
+  <package id="Ubiety.Logging.Core" version="1.2.2" targetFramework="net472" />
 </packages>
