--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
-  <package id="DotNetZip" version="1.14.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.13.0" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
@@ -29,6 +28,8 @@
   <package id="System.Composition.Hosting" version="1.4.1" targetFramework="net472" />
   <package id="System.Composition.Runtime" version="1.4.1" targetFramework="net472" />
   <package id="System.Composition.TypedParts" version="1.4.1" targetFramework="net472" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.8.1" targetFramework="net472" />
