Move Addin.ini, gloebit.ini and others to config-addon-opensim

--- a/OutworldzFiles/Opensim/bin/config-addon-opensim/Gloebit.ini
+++ b/OutworldzFiles/Opensim/bin/config-addon-opensim/Gloebit.ini
@@ -5,7 +5,7 @@
 ;; Set to true to enable GMM for all regions controlled by this OpenSim process.
 ;; Requires that "economymodule = Gloebit" is set in [Economy] or [Startup] section of opensim.ini
 ;; If set to false, can be enabled for individual regions - see GLBEnabledOnlyInRegions below
-Enabled=False
+Enabled=True
 
 ;# {GLBEnabledOnlyInRegions} {Enabled:false} {Enable Gloebit Money Module in specific regions by region UUID (space delimited list)?} {*} ""
 ;; If Enabled is false above, you can enable for individual regions controlled by this OpenSim process.
