--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -5,4 +5,17 @@
             <section name="SteveCadwallader.CodeMaid.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         </sectionGroup>
     </configSections>
+    <userSettings>
+        <SteveCadwallader.CodeMaid.Properties.Settings>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </SteveCadwallader.CodeMaid.Properties.Settings>
+    </userSettings>
 </configuration>
