--- a/.gitignore
+++ b/.gitignore
@@ -106,44 +106,44 @@ Thumbs.db
 *.dll.build
 *.dll
 *.VisualState.xml
-bin/Debug/*.dll
-bin/*.dll.mdb
-bin/*.db
-bin/OpenSim.vshost.exe.config
-bin/*.maddin
-bin/j2kDecodeCache
-bin/Physics*
-bin/Terrain*
-bin/Regions/*
-bin/UserAssets
-bin/estate_settings.xml
-bin/config-include/CenomeCache.ini
-bin/config-include/FlotsamCache.ini
-bin/config-include/GridCommon.ini
-bin/config-include/StandaloneCommon.ini
-bin/OpenSim.Grid.AssetInventoryServer.log
-bin/OpenSim.Grid.AssetServer.log
-bin/OpenSim.Grid.GridServer.log
-bin/OpenSim.Grid.InventoryServer.log
-bin/OpenSim.Grid.MessagingServer.log
-bin/OpenSim.Grid.UserServer.log
-bin/OpenSim.log
+OutworldzFiles/opensim/bin/Debug/*.dll
+OutworldzFiles/opensim/bin/*.dll.mdb
+OutworldzFiles/opensim/bin/*.db
+OutworldzFiles/opensim/bin/OpenSim.vshost.exe.config
+OutworldzFiles/opensim/bin/*.maddin
+OutworldzFiles/opensim/bin/j2kDecodeCache
+OutworldzFiles/opensim/bin/Physics*
+OutworldzFiles/opensim/bin/Terrain*
+OutworldzFiles/opensim/bin/Regions/*
+OutworldzFiles/opensim/bin/UserAssets
+OutworldzFiles/opensim/bin/estate_settings.xml
+OutworldzFiles/opensim/bin/config-include/CenomeCache.ini
+OutworldzFiles/opensim/bin/config-include/FlotsamCache.ini
+OutworldzFiles/opensim/bin/config-include/GridCommon.ini
+OutworldzFiles/opensim/bin/config-include/StandaloneCommon.ini
+OutworldzFiles/opensim/bin/OpenSim.Grid.AssetInventoryServer.log
+OutworldzFiles/opensim/bin/OpenSim.Grid.AssetServer.log
+OutworldzFiles/opensim/bin/OpenSim.Grid.GridServer.log
+OutworldzFiles/opensim/bin/OpenSim.Grid.InventoryServer.log
+OutworldzFiles/opensim/bin/OpenSim.Grid.MessagingServer.log
+OutworldzFiles/opensim/bin/OpenSim.Grid.UserServer.log
+OutworldzFiles/opensim/bin/OpenSim.log
 
-bin/crashes/
-Examples/*.dll
-OpenSim.build
-OpenSim.sln
-OpenSim.suo
-Prebuild/Prebuild.build
-Prebuild/Prebuild.sln
-TestResult.xml
-cov/*
-OpenSim/OpenSim.userprefs
-OpenSim/OpenSim.usertasks
-TAGS
+OutworldzFiles/opensim/bin/crashes/
+OutworldzFiles/opensim/Examples/*.dll
+OutworldzFiles/opensim/OpenSim.build
+OutworldzFiles/opensim/OpenSim.sln
+OutworldzFiles/opensim/OpenSim.suo
+OutworldzFiles/opensim/Prebuild/Prebuild.build
+OutworldzFiles/opensim/Prebuild/Prebuild.sln
+OutworldzFiles/opensim/TestResult.xml
+OutworldzFiles/opensim/cov/*
+OutworldzFiles/opensim/OpenSim/OpenSim.userprefs
+OutworldzFiles/opensim/OpenSim/OpenSim.usertasks
+OutworldzFiles/opensim/TAGS
 *~
-Makefile.local
-bin/.version
-compile.bat
+OutworldzFiles/opensim/Makefile.local
+OutworldzFiles/opensim/.version
+OutworldzFiles/opensim/compile.bat
 
 Outworldzfiles/banlist.txt
