--- a/OutworldzFiles/Opensim/bin/OpenSim.exe.config
+++ b/OutworldzFiles/Opensim/bin/OpenSim.exe.config
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<configuration>
+<configuration  >
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <runtime>
     <loadFromRemoteSources enabled="true" />
   </runtime>
+  
   <appSettings>
+    <!--<add key="log4net.Internal.Debug" value="true"/>-->
   </appSettings>
   
   <log4net>
