--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.8.0" targetFramework="net472" />
