Letter Case  folder

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer-JOpensim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer-JOpensim.ini
@@ -268,7 +268,10 @@ enabled=True
 
 ;; for JOpensim
 [Profile]
-ProfileURL ="${Const|BaseURL}:${Const|PublicPort}/index.php?option=com_opensim&view=interface"
+ProfileURL ="${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=interface"
+Module = "jOpenSimProfile"
+; Optional:
+;Debug = true
 
 ;;
 
