rm deprecated name in my.ini

--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -73,11 +73,11 @@ max_allowed_packet=128M
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql"
+basedir="O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql/Data"
+datadir="O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -108,7 +108,6 @@ max_connections=500
 # textually different every time, the query cache may result in a
 # slowdown instead of a performance improvement.
 query_cache_size=8M
-
 
 # Maximum size for internal (in-memory) temporary tables. If a table
 # grows larger than this value, it is automatically converted to disk
@@ -160,17 +159,6 @@ read_rnd_buffer_size=256K
 # large settings.
 sort_buffer_size=212K
 
-#*** INNODB Specific options ***
-# Use this option if you have a MySQL server with InnoDB support enabled
-# but you do not plan to use it. This will save memory and disk space
-# and speed up some things.
-#skip-innodb
-# Additional memory pool that is used by InnoDB to store metadata
-# information.  If InnoDB requires more memory for this purpose it will
-# start to allocate it from the OS.  As this is fast enough on most
-# recent operating systems, you normally do not need to change this
-# value. SHOW INNODB STATUS will display the current amount used.
-innodb_additional_mem_pool_size=2M
 
 # If set to 1, InnoDB will flush (fsync) the transaction logs to the
 # disk at each commit, which offers full ACID behavior. If you are
