Apache and Config oops

--- a/OutworldzFiles/Opensim/bin/Robust.exe.config
+++ b/OutworldzFiles/Opensim/bin/Robust.exe.config
@@ -49,7 +49,7 @@
     </appender>
 
     <root>
-      <level type="log4net.Util.PatternString"  value="%env{OSIM_LOGLEVEL}" />
+      <level type="log4net.Util.PatternString"  value="INFO" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
