--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -2,7 +2,7 @@
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
-; Standard Grid Server
+; Standard Grid Server  Only
 ;
 ; ### Choose the DB
 ;
@@ -65,7 +65,9 @@ Include-FlotsamCache="config-include/FlotsamCache.ini"
 ;; Optionally, the port for the LLProxyLoginModule module can be changed
 ;Setup_LLProxyLoginModule = "9090/"
 ;; Authorization is not on by default, as it depends on external php
-;AuthorizationServices = "RemoteAuthorizationServicesConnector"
+; JOPensim
+AuthorizationServices="RemoteAuthorizationServicesConnector"
+
 [AssetService]
 DefaultAssetLoader="OpenSim.Framework.AssetLoader.Filesystem.dll"
 AssetLoaderArgs="assets/AssetSets.xml"
@@ -85,8 +87,8 @@ InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;MaxRetries = 0
 ;
 [GridInfo]
-economymodule=Gloebit
 
+;economymodule=Gloebit
 ;
 ; Change this to your grid info service
 ;
@@ -236,6 +238,7 @@ UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AuthorizationService]
+AuthorizationServerURI="${Const|BaseURL}:${Const|ApachePort}/JOpensim/index.php?option=com_opensim&view=auth&format=xml&tmpl=component"
 
 ; If you have regions with access restrictions
 ; specify them here using the convention
@@ -257,3 +260,8 @@ MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [WebStats]
 enabled=True
+
+;; for JOpensim
+[Profile]
+ProfileURL="${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=interface"
+Module="jOpenSimProfile"
