--- a/OutworldzFiles/Opensim/bin/OpenSim.exe.config
+++ b/OutworldzFiles/Opensim/bin/OpenSim.exe.config
@@ -33,7 +33,7 @@
 -->
 
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-      <file type="log4net.Util.PatternString" value="%env{OSIM_LOGPATH}\OpenSim.log" />
+      <file type="log4net.Util.PatternString" value="OpenSim.log" />
       <appendToFile value="true" />
       <filter type="log4net.Filter.LoggerMatchFilter">
         <loggerToMatch value="special"/>
@@ -46,7 +46,7 @@
     </appender>
 
     <appender name="StatsLogFileAppender" type="log4net.Appender.FileAppender">
-      <file type="log4net.Util.PatternString" value="%env{OSIM_LOGPATH}\OpenSimStats.log"/>
+      <file type="log4net.Util.PatternString" value="OpenSimStats.log"/>
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date - %message%newline" />
@@ -54,14 +54,14 @@
     </appender>
 
     <root>
-      <level type="log4net.Util.PatternString" value="%env{OSIM_LOGLEVEL}" />
+      <level type="log4net.Util.PatternString" value="INFO" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
 
     <!-- Independently control logging level for per region module loading -->
     <logger name="OpenSim.ApplicationPlugins.RegionModulesController.RegionModulesControllerPlugin">
-      <level type="log4net.Util.PatternString" value="%env{OSIM_LOGLEVEL}"/>
+      <level type="log4net.Util.PatternString" value="INFO"/>
     </logger>
 
     <!-- used for stats recording -->
