Increase upload size in PHP

--- a/OutworldzFiles/PHP7/php.ini
+++ b/OutworldzFiles/PHP7/php.ini
@@ -691,7 +691,7 @@ auto_globals_jit = On
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = 8M
+post_max_size = 32M
 
 ; Automatically add files before PHP document.
 ; http://php.net/auto-prepend-file
@@ -747,7 +747,7 @@ include_path = "O:/Opensim/Outworldz DreamGrid Master.;/OutworldzFiles/PHP7/pear
 ; see documentation for security issues.  The alternate is to use the
 ; cgi.force_redirect configuration below
 ; http://php.net/doc-root
-doc_root = "C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Apache/htdocs/"
+doc_root = "O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Apache/htdocs/"
 
 ; The directory under which PHP opens the script using /~username used only
 ; if nonempty.
@@ -758,7 +758,7 @@ user_dir =
 ; http://php.net/extension-dir
 ;extension_dir = "./"
 ; On windows:
-extension_dir = "C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/PHP7/ext/"
+extension_dir = "O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/PHP7/ext/"
 
 
 ; Directory where the temporary files should be placed.
@@ -844,7 +844,7 @@ file_uploads = On
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
-upload_max_filesize = 8M
+upload_max_filesize = 32M
 
 ; Maximum number of files that can be uploaded via a single request
 max_file_uploads = 20
