--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -470,6 +470,7 @@
     <Compile Include="GridNames.vb" />
     <Compile Include="Help.vb" />
     <Compile Include="IP.vb" />
+    <Compile Include="jOpensim.vb" />
     <Compile Include="My Project\Resources.cz.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
