Fix speed issue in CPU counters Stop crash in formregion abort if writeregion or INI file read fails Add log file back along with log levels Cap_Gettexture setting added to oepsnim.ini.proto for next pass

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer-JOpensim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer-JOpensim.ini
@@ -1,4 +1,4 @@
-;; ROBUST VERSION
+;; ROBUST VERSION for Joomla/jOpensim
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
@@ -268,7 +268,7 @@ enabled=True
 
 ;; for JOpensim
 [Profile]
-ProfileURL ="${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=interface"
+ProfileURL ="${Const|BaseURL}:${Const|ApachePort}/JOpensim/index.php?option=com_opensim&view=interface"
 Module = "jOpenSimProfile"
 ; Optional:
 ;Debug = true
