--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -71,6 +71,9 @@
                 serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
+                <value>1</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
