--- a/Start.exe.config
+++ b/Start.exe.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Outworldz.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
   </configSections>
   <appSettings>
     <!--<add key="SendKeys" value="SendInput"/>-->
     <!--<add key="SendKeys" value="JournalHook"/>-->
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.diagnostics>
     <sources>
@@ -33,261 +29,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <userSettings>
-    <Outworldz.My.MySettings>
-      <setting name="AutoBackup" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="PublicIP" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
-      <setting name="CoordX" serializeAs="String">
-        <value>2000</value>
-      </setting>
-      <setting name="CoordY" serializeAs="String">
-        <value>2000</value>
-      </setting>
-      <setting name="PrivatePort" serializeAs="String">
-        <value>8003</value>
-      </setting>
-      <setting name="SizeX" serializeAs="String">
-        <value>256</value>
-      </setting>
-      <setting name="SizeY" serializeAs="String">
-        <value>256</value>
-      </setting>
-      <setting name="AutobackupInterval" serializeAs="String">
-        <value>720</value>
-      </setting>
-      <setting name="KeepForDays" serializeAs="String">
-        <value>30</value>
-      </setting>
-      <setting name="Password" serializeAs="String">
-        <value>secret</value>
-      </setting>
-      <setting name="AdminFirst" serializeAs="String">
-        <value>Wifi</value>
-      </setting>
-      <setting name="AdminLast" serializeAs="String">
-        <value>Admin</value>
-      </setting>
-      <setting name="AdminEmail" serializeAs="String">
-        <value>email@somewhere.com</value>
-      </setting>
-      <setting name="ConsoleUser" serializeAs="String">
-        <value>Console</value>
-      </setting>
-      <setting name="ConsolePass" serializeAs="String">
-        <value>secret</value>
-      </setting>
-      <setting name="ChatTime" serializeAs="String">
-        <value>1000</value>
-      </setting>
-      <setting name="ImageNum" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="region_owner_is_god" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="region_manager_is_god" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="TimerInterval" serializeAs="String">
-        <value>60</value>
-      </setting>
-      <setting name="AccountConfirmationRequired" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="SmtPropUserName" serializeAs="String">
-        <value>Gmail for notification</value>
-      </setting>
-      <setting name="SmtpPassword" serializeAs="String">
-        <value>Gmail password</value>
-      </setting>
-      <setting name="RanAllDiags" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="SkipUpdateCheck" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="DiagFailed" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="DnsName" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="WebStats" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="HttpPort" serializeAs="String">
-        <value>8002</value>
-      </setting>
-      <setting name="MachineID" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="LoopBackDiag" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="UPnpDiag" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="SplashPage" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="Physics" serializeAs="String">
-        <value>3</value>
-      </setting>
-      <setting name="MyX" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="MyY" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="RobustServer" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
-      <setting name="VivoxEnabled" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="Vivox_username" serializeAs="String">
-        <value>someusername</value>
-      </setting>
-      <setting name="Vivox_password" serializeAs="String">
-        <value>somepassword</value>
-      </setting>
-      <setting name="MapType" serializeAs="String">
-        <value>Simple</value>
-      </setting>
-      <setting name="BackupFolder" serializeAs="String">
-        <value>AutoBackup</value>
-      </setting>
-      <setting name="DiagsRun2" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="GloebitsEnable" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="GloebitsMode" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="GLSandKey" serializeAs="String">
-        <value>OAuth Sandbox key</value>
-      </setting>
-      <setting name="GLSandSecret" serializeAs="String">
-        <value>OAuth sandbox secret</value>
-      </setting>
-      <setting name="GLBOwnerEmail" serializeAs="String">
-        <value>Your Email</value>
-      </setting>
-      <setting name="GLBOwnerName" serializeAs="String">
-        <value>Your Avatar Name</value>
-      </setting>
-      <setting name="GLProdKey" serializeAs="String">
-        <value>OAuth Production key</value>
-      </setting>
-      <setting name="GLProdSecret" serializeAs="String">
-        <value>OAuth Production secret</value>
-      </setting>
-      <setting name="RegionDbPassword" serializeAs="String">
-        <value>opensimpassword</value>
-      </setting>
-      <setting name="RegionDBUsername" serializeAs="String">
-        <value>opensimuser</value>
-      </setting>
-      <setting name="RegionDBName" serializeAs="String">
-        <value>opensim</value>
-      </setting>
-      <setting name="WifiEnabled" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="DiagnosticPort" serializeAs="String">
-        <value>8001</value>
-      </setting>
-      <setting name="RobustDataBaseName" serializeAs="String">
-        <value>robust</value>
-      </setting>
-      <setting name="RobustUsername" serializeAs="String">
-        <value>robustuser</value>
-      </setting>
-      <setting name="RobustPassword" serializeAs="String">
-        <value>robustpassword</value>
-      </setting>
-      <setting name="Autostart" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="BootStart" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="EnableHypergrid" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="AutoLoad" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="RunOnce" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="GridFolder" serializeAs="String">
-        <value>Opensim</value>
-      </setting>
-      <setting name="PublicPort" serializeAs="String">
-        <value>8001</value>
-      </setting>
-      <setting name="MySqlRobustDBPort" serializeAs="String">
-        <value>3306</value>
-      </setting>
-      <setting name="DBName" serializeAs="String">
-        <value>opensim</value>
-      </setting>
-      <setting name="DBUserID" serializeAs="String">
-        <value>opensimuser</value>
-      </setting>
-      <setting name="DBPassword" serializeAs="String">
-        <value>opensimpassword</value>
-      </setting>
-      <setting name="DBSource" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
-      <setting name="MyIP" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="WelcomeRegion" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="UPnPEnabled" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="SimName" serializeAs="String">
-        <value>DreamGrid</value>
-      </setting>
-      <setting name="EnableWindowsFormsHighDpiAutoResizing" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="ConsoleShow" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="AvatarShow" serializeAs="String">
-        <value>true</value>
-      </setting>
-      <setting name="ViewerEase" serializeAs="String">
-        <value>false</value>
-      </setting>
-      <setting name="allow_grid_gods" serializeAs="String">
-        <value>false</value>
-      </setting>
-      <setting name="parcel_owner_is_god" serializeAs="String">
-        <value>false</value>
-      </setting>
-      <setting name="DiagsRun" serializeAs="String">
-        <value>false</value>
-      </setting>
-    </Outworldz.My.MySettings>
-  </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.13.0.0" newVersion="3.13.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.14.0.0" newVersion="3.14.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
@@ -295,7 +41,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -347,20 +93,12 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.4.5.0" newVersion="1.4.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
