Increase buffers sizes for large mesh objects

--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -73,11 +73,11 @@ max_allowed_packet=128M
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Mysql"
+basedir="C:/Almost Heaven/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="O:/Opensim/Outworldz DreamGrid Master/OutworldzFiles/Mysql/Data"
+datadir="C:/Almost Heaven/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -107,8 +107,6 @@ max_connections=500
 # Note: In case your tables change very often or if your queries are
 # textually different every time, the query cache may result in a
 # slowdown instead of a performance improvement.
-query_cache_size=8M
-
 # Maximum size for internal (in-memory) temporary tables. If a table
 # grows larger than this value, it is automatically converted to disk
 # based table This limitation is for a single table. There can be many
@@ -159,7 +157,6 @@ read_rnd_buffer_size=256K
 # large settings.
 sort_buffer_size=212K
 
-
 # If set to 1, InnoDB will flush (fsync) the transaction logs to the
 # disk at each commit, which offers full ACID behavior. If you are
 # willing to compromise this safety, and you are running small
@@ -184,14 +181,14 @@ innodb_log_buffer_size=1M
 # cause paging in the operating system.  Note that on 32bit systems you
 # might be limited to 2-3.5G of user level memory per process, so do not
 # set it too high.
-innodb_buffer_pool_size=10M
+innodb_buffer_pool_size=100M
 
 # Size of each log file in a log group. You should set the combined size
 # of log files to about 25%-100% of your buffer pool size to avoid
 # unneeded buffer pool flush activity on log file overwrite. However,
 # note that a larger logfile size will increase the time needed for the
 # recovery process.
-innodb_log_file_size=10M
+innodb_log_file_size=50M
 
 # Number of threads allowed inside the InnoDB kernel. The optimal value
 # depends highly on the application, hardware as well as the OS
