Log files now change level and are in the correct place again, Log4NetIssue

--- a/OutworldzFiles/Opensim/bin/OpenSim.exe.config
+++ b/OutworldzFiles/Opensim/bin/OpenSim.exe.config
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<configuration  >
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <runtime>
     <loadFromRemoteSources enabled="true" />
   </runtime>
-  
   <appSettings>
-    <!--<add key="log4net.Internal.Debug" value="true"/>-->
   </appSettings>
   
   <log4net>
@@ -33,7 +31,7 @@
 -->
 
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-      <file type="log4net.Util.PatternString" value="OpenSim.log" />
+      <file value="C:\Opensim\Outworldz_Dreamgrid\OutworldzFiles\Opensim\bin\Regions\Welcome\OpenSim.log" />
       <appendToFile value="true" />
       <filter type="log4net.Filter.LoggerMatchFilter">
         <loggerToMatch value="special"/>
@@ -46,7 +44,7 @@
     </appender>
 
     <appender name="StatsLogFileAppender" type="log4net.Appender.FileAppender">
-      <file type="log4net.Util.PatternString" value="OpenSimStats.log"/>
+      <file value="C:\Opensim\Outworldz_Dreamgrid\OutworldzFiles\Opensim\bin\Regions\Welcome\OpenSimStats.log"/>
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date - %message%newline" />
@@ -54,14 +52,14 @@
     </appender>
 
     <root>
-      <level type="log4net.Util.PatternString" value="INFO" />
+      <level value="INFO" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
 
     <!-- Independently control logging level for per region module loading -->
     <logger name="OpenSim.ApplicationPlugins.RegionModulesController.RegionModulesControllerPlugin">
-      <level type="log4net.Util.PatternString" value="INFO"/>
+      <level value="INFO"/>
     </logger>
 
     <!-- used for stats recording -->
