--- a/OutworldzFiles/Opensim/bin/Robust.exe.config
+++ b/OutworldzFiles/Opensim/bin/Robust.exe.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
@@ -8,23 +8,21 @@
   </runtime>
   <appSettings>
   </appSettings>
-
   <log4net>
     <appender name="Console" type="OpenSim.Framework.Console.OpenSimAppender, OpenSim.Framework.Console">
       <filter type="log4net.Filter.LoggerMatchFilter">
-        <loggerToMatch value="special"/>
-        <acceptOnMatch value="false"/>
+        <loggerToMatch value="special" />
+        <acceptOnMatch value="false" />
       </filter>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date{HH:mm:ss} - %message" />
       </layout>
     </appender>
-
-<!-- If you want automatic log-rolling then use RollingFileAppender instead of FileAppender:
+    <!-- If you want automatic log-rolling then use RollingFileAppender instead of FileAppender:
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="log/Robust.log" />
       <rollingStyle value="Date" />
-      <datePattern value="'.'yyyy-MM-dd"/>
+      <datePattern value="'.'yyyy-MM-dd" />
       ...
 -->
 
@@ -32,31 +30,28 @@
       <file value="Robust.log" />
       <appendToFile value="true" />
       <filter type="log4net.Filter.LoggerMatchFilter">
-        <loggerToMatch value="special"/>
-        <acceptOnMatch value="false"/>
+        <loggerToMatch value="special" />
+        <acceptOnMatch value="false" />
       </filter>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %-5level (%thread) - %logger %message%newline" />
       </layout>
     </appender>
-
     <appender name="StatsLogFileAppender" type="log4net.Appender.FileAppender">
-      <file value="RobustStats.log"/>
+      <file value="RobustStats.log" />
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date - %message%newline" />
       </layout>
     </appender>
-
     <root>
-      <level type="log4net.Util.PatternString"  value="INFO" />
+      <level  value="INFO" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
-
     <!-- used for stats recording -->
     <logger name="special.StatsLogger">
-      <appender-ref ref="StatsLogFileAppender"/>
+      <appender-ref ref="StatsLogFileAppender" />
     </logger>
   </log4net>
 </configuration>
