--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ Outworldzfiles/opensim/bin/Robust.HG.ini.bak
 Outworldzfiles/Settings.ini
 Outworldzfiles/Settings.bak
 Outworldzfiles/Mysql/Data
+Outworldzfiles/Apache/htdocs/Jopensim
 
 Installer_Src/Setup Dreamworld/bin/*
 **/teleports.htm
