--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -65,22 +65,25 @@ character-set-client-handshake=FALSE
 lower_case_table_names=1
 
 # for crash recovery only. See https://dev.mysql.com/doc/refman/8.0/en/innodb-parameters.html#sysvar_innodb_force_recovery
-#innodb_flush_method =2
+#innodb-force-recovery=2
+#secure-file-priv = ""
+#innodb_force_load_corrupted=ON
+#innodb_purge_threads=0
 
 # auto-edited by Dreamworld
 # The TCP/IP Port the MySQL Server will listen on
 port=3306
 
 # required for large mesh files
-max_allowed_packet=128M
+max_allowed_packet=64M
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="C:/XXX/OutworldzFiles/Mysql"
+basedir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="C:/XXX/OutworldzFiles/Mysql/Data"
+datadir="C:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -129,7 +132,7 @@ thread_cache_size=8
 # recreating the index (during REPAIR, ALTER TABLE or LOAD DATA INFILE.
 # If the file-size would be bigger than this, the index will be created
 # through the key cache (which is slower).
-myisam_max_sort_file_size=100G
+myisam_max_sort_file_size=100M
 
 # If the temporary file used for fast index creation would be bigger
 # than using the key cache by the amount specified here, then prefer the
@@ -184,14 +187,14 @@ innodb_log_buffer_size=1M
 # cause paging in the operating system.  Note that on 32bit systems you
 # might be limited to 2-3.5G of user level memory per process, so do not
 # set it too high.
-innodb_buffer_pool_size=100M
+innodb_buffer_pool_size=20M
 
 # Size of each log file in a log group. You should set the combined size
 # of log files to about 25%-100% of your buffer pool size to avoid
 # unneeded buffer pool flush activity on log file overwrite. However,
 # note that a larger logfile size will increase the time needed for the
 # recovery process.
-innodb_log_file_size=100M
+innodb_log_file_size=10M
 
 # Number of threads allowed inside the InnoDB kernel. The optimal value
 # depends highly on the application, hardware as well as the OS
