Fix quitter to capture exited

--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -1,6 +1,6 @@
 ﻿[DatabaseService]
 StorageProvider="Diva.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3307;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 [WifiService]
 
@@ -11,17 +11,18 @@ Enabled=True
 
 ;; Set this to a port, possibly using one of the ports defined in the host config file
 ;ServerPort = 8002 or ${Const|PublicPort}
-GridName=Gandalf
-LoginURL=http://gandalf.outworldz.net:8002
-WebAddress=http://gandalf.outworldz.net:8002
+GridName=Blue
+LoginURL=http://blue.outworldz.net:8002
+WebAddress=http://blue.outworldz.net:8002
 
 ;; The Wifi Administrator account
 AdminFirst=Wifi
 AdminLast=Admin
-AdminEmail=email@somewhere.com
+AdminEmail=not@set.yet
+AdminPassword=CR6wD5IzEf^8APC
 
 ;; Do you want to be able to control grid registrations?
-AccountConfirmationRequired=True
+AccountConfirmationRequired=False
 
 ;; Time interval in seconds for updating statistics data for variables like
 ;; UsersInworld, UsersTotal, and RegionsTotal.
@@ -54,8 +55,8 @@ HyperlinkServiceUsersSeeAll=true
 ;; Users will get email notifications from this account
 SmtpHost=smtp.gmail.com
 SmtpPort=587
-SmtpUsername=Gmail for notification
-SmtpPassword=Gmail password
+SmtpUsername=LoginName@gmail.com
+SmtpPassword=Some Password
 
 ;; If mono certificates are griefing you, you may bypass certificate verification, but
 ;; DO IT AT YOUR OWN RISK!
@@ -75,5 +76,6 @@ SmtpPassword=Gmail password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=9qHC49y^H6ASnId
+
+;; where the avatar first lands
 HomeLocation=Welcome/128/128/24
