--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -2,7 +2,7 @@
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
-; Standard Grid Server  Only
+; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
@@ -13,7 +13,7 @@
 ; Uncomment these lines if you want to use mysql storage
 ; Change the connection string to your db details
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=opensim;Port=3306;User ID=opensimuser;Password=opensimpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=opensim;Port=3307;User ID=opensimuser;Password=opensimpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 ; Uncomment this line if you are using MySQL and want to use a different database for estates
 ; The usual application for this is to allow estates to be spread out across multiple simulators by share the same database.
@@ -65,9 +65,7 @@ Include-FlotsamCache="config-include/FlotsamCache.ini"
 ;; Optionally, the port for the LLProxyLoginModule module can be changed
 ;Setup_LLProxyLoginModule = "9090/"
 ;; Authorization is not on by default, as it depends on external php
-; JOPensim
-AuthorizationServices="RemoteAuthorizationServicesConnector"
-
+;AuthorizationServices = "RemoteAuthorizationServicesConnector"
 [AssetService]
 DefaultAssetLoader="OpenSim.Framework.AssetLoader.Filesystem.dll"
 AssetLoaderArgs="assets/AssetSets.xml"
@@ -87,8 +85,8 @@ InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;MaxRetries = 0
 ;
 [GridInfo]
+economymodule=Gloebit
 
-;economymodule=Gloebit
 ;
 ; Change this to your grid info service
 ;
@@ -238,7 +236,6 @@ UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AuthorizationService]
-AuthorizationServerURI="${Const|BaseURL}:${Const|ApachePort}/JOpensim/index.php?option=com_opensim&view=auth&format=xml&tmpl=component"
 
 ; If you have regions with access restrictions
 ; specify them here using the convention
@@ -260,8 +257,3 @@ MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [WebStats]
 enabled=True
-
-;; for JOpensim
-[Profile]
-ProfileURL="${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=interface"
-Module="jOpenSimProfile"
