new icons, Refactor PropMaxXMLPortUsed,PropMaxPortUsed Add group port to new regions streamwriter for Grep no calling regionclass via instance internally

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -803,6 +803,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\table.png" />
+    <None Include="Resources\earth_view.png" />
+    <None Include="Resources\chart.png" />
     <None Include="Resources\selection.png" />
     <None Include="Resources\replace2.png" />
     <None Include="Resources\navigate_up2.png" />
